nada de mais foi mudado

--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
 </header>
 <body>
    <main>
+       <div class="divTemp"> 
+
+       </div>
+       <div class="precoTemp"> 
+           
+       </div>
     <section id="corpo">
         <ul class="ulBox">
             
